代码沙箱远程实现，并实现模板方法优化