@@ -1,10 +1,16 @@
 package com.yupi.yuiojcodesendbox;
-import cn.hutool.core.util.ObjectUtil;
-import cn.hutool.dfa.FoundWord;
+
+import cn.hutool.core.io.FileUtil;
+import cn.hutool.core.util.StrUtil;
 import cn.hutool.dfa.WordTree;
+import com.yupi.yuiojcodesendbox.model.ExecuteCodeRequest;
+import com.yupi.yuiojcodesendbox.model.ExecuteCodeResponse;
+import com.yupi.yuiojcodesendbox.model.ExecuteMessage;
 import com.yupi.yuiojcodesendbox.model.JudgeInfo;
+import com.yupi.yuiojcodesendbox.util.ProcessUtil;
+import lombok.extern.slf4j.Slf4j;
+
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -12,27 +18,18 @@ import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
-import cn.hutool.core.io.FileUtil;
-import cn.hutool.core.util.StrUtil;
-import com.yupi.yuiojcodesendbox.model.ExecuteCodeRequest;
-import com.yupi.yuiojcodesendbox.model.ExecuteCodeResponse;
-import com.yupi.yuiojcodesendbox.model.ExecuteMessage;
-import com.yupi.yuiojcodesendbox.util.ProcessUtil;
-
-public class JavaNativeCodeSandboxOld implements CodeSandbox{
+@Slf4j
+public abstract class JavaCodeSandboxTemplate implements CodeSandbox{
 
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
 
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
-    private static final String SECURITY_MANAGER_PATH = "D:\\星球项目\\YuiOJ\\yuioj-code-sendbox\\src\\main\\resources\\security";
-
-    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
-
     //操作关键字黑名单
     private static final List<String> blackList = Arrays.asList("Files","exec");
 
     private static final WordTree WORD_TREE;
+
 
     //初始化字典树
     static {
@@ -40,20 +37,12 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox{
         WORD_TREE.addWords(blackList);
     }
 
-    @Override
-    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
-        List<String> inputList = executeCodeRequest.getInputList();
-        String code = executeCodeRequest.getCode();
-        String language = executeCodeRequest.getLanguage();
-
-        //校验代码中是否有黑名单中的词
-//        FoundWord foundWord = WORD_TREE.matchWord(code);
-//        if (ObjectUtil.isNotNull(foundWord)){
-//            System.out.println("包含禁止词" + foundWord.getFoundWord());
-//            return null;
-//        }
-
-        //        1. 把用户的代码保存为文件
+    /**
+     * 1. 把用户代码保存为文件
+     * @param code
+     * @return
+     */
+    public File saveCodeToFile(String code){
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
 
@@ -64,20 +53,41 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox{
         String  userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
         String  userCodePath = userCodeParentPath + File.separator + GLOBAL_JAVA_CLASS_NAME;
         File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
+        return userCodeFile;
+    }
 
-        //        2. 编译代码，得到 class 文件
+    /**
+     * 2. 编译代码
+     * @param userCodeFile
+     * @return
+     */
+    public ExecuteMessage compileFile(File userCodeFile){
         String compileCmd =String.format("javac -encoding utf-8 %s",userCodeFile.getAbsoluteFile());
         try {
             Process compileCmdProcess = Runtime.getRuntime().exec(compileCmd);
             ExecuteMessage executeMessage = ProcessUtil.runProcessAndGetMessage(compileCmdProcess, "编译");
+            if (executeMessage.getExitValue() != 0){
+                throw new RuntimeException("编译错误");
+            }
             System.out.println(executeMessage);
-        } catch (IOException e) {
-            getErrorResponse(e);
+            return executeMessage;
+        } catch (Exception e) {
+//            getErrorResponse(e);
+            throw new RuntimeException(e);
         }
-        //        3. 执行代码，得到输出结果
+    }
+
+    /**
+     * 3. 执行代码
+     * @param userCodeFile
+     * @param inputList
+     * @return
+     */
+    public List<ExecuteMessage> runFile(File userCodeFile,List<String> inputList){
         ArrayList<ExecuteMessage> executeMessageList = new ArrayList<>();
+        String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
         for (String inputArgs : inputList) {
-            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
+            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
                 //超时控制
@@ -94,12 +104,19 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox{
                 ExecuteMessage executeMessage = ProcessUtil.runProcessAndGetMessage(runProcess, "运行");
                 System.out.println(executeMessage);
                 executeMessageList.add(executeMessage);
-            } catch (IOException e) {
-                getErrorResponse(e);
+            } catch (Exception e) {
+                throw new RuntimeException("执行错误", e);
             }
         }
+        return executeMessageList;
+    }
 
-        //        4. 收集整理输出结果
+    /**
+     * 4. 获取输出结果
+     * @param executeMessageList
+     * @return
+     */
+    public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList){
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         ArrayList<String> outputList = new ArrayList<>();
         long maxTime = 0;
@@ -119,21 +136,65 @@ public class JavaNativeCodeSandboxOld implements CodeSandbox{
         }
         //正常运行完成
         if (outputList.size() == executeMessageList.size()){
-                executeCodeResponse.setStatus(1);
+            executeCodeResponse.setStatus(1);
         }
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo judgeInfo = new JudgeInfo();
         judgeInfo.setTime(maxTime);
         executeCodeResponse.setJudgeInfo(judgeInfo);
-
-        //        5. 文件清理
-        if (userCodeFile.getParentFile() != null){
-            boolean del = FileUtil.del(userCodePath);
-            System.out.println("删除" + (del?"成功" : "失败"));
-        }
         return executeCodeResponse;
     }
 
+    /**
+     * 5. 清理文件
+     * @param userCodeFile
+     * @return
+     */
+    public boolean deleteFile(File userCodeFile){
+        if (userCodeFile.getParentFile() != null){
+            String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+            boolean del = FileUtil.del(userCodeParentPath);
+            System.out.println("删除" + (del?"成功" : "失败"));
+            return del;
+        }
+        return true;
+    }
+
+    @Override
+    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+        List<String> inputList = executeCodeRequest.getInputList();
+        String code = executeCodeRequest.getCode();
+        String language = executeCodeRequest.getLanguage();
+
+        //校验代码中是否有黑名单中的词
+//        FoundWord foundWord = WORD_TREE.matchWord(code);
+//        if (ObjectUtil.isNotNull(foundWord)){
+//            System.out.println("包含禁止词" + foundWord.getFoundWord());
+//            return null;
+//        }
+
+        //        1. 把用户的代码保存为文件
+        File userCodeFile = saveCodeToFile(code);
+        //        2. 编译代码，得到 class 文件
+        ExecuteMessage compileFileExecuteMessage = compileFile(userCodeFile);
+        System.out.println(compileFileExecuteMessage);
+        //        3. 执行代码，得到输出结果
+        List<ExecuteMessage> executeMessageList = runFile(userCodeFile, inputList);
+        //        4. 收集整理输出结果
+        ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
+        //        5. 文件清理
+        boolean deleted = deleteFile(userCodeFile);
+        if (!deleted){
+            log.error("deleteFile error,userCodeFilePath = {}",userCodeFile.getAbsoluteFile());
+        }
+        return outputResponse;
+    }
+
+    /**
+     * 获取错误响应
+     * @param e
+     * @return
+     */
     private ExecuteCodeResponse getErrorResponse(Throwable e){
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         executeCodeResponse.setOutputList(new ArrayList<>());
